--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.2.6",
     "date-fns": "^2.29.3",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
@@ -17,8 +18,11 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-static-google-map": "^0.9.0",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
